Refactor user resources and improve i18n structure: standardize resource definitions and enhance localization for admin links and folders

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,5 +4,23 @@
     "loading": "Laden...",
     "login": "Login",
     "allRightsReserved": "Alle Rechte vorbehalten"
+  },
+  "admin": {
+    "links": {
+      "users": "Benutzer",
+      "companies": "Unternehmen",
+      "locations": "Standorte",
+      "roles": "Rollen",
+      "permissions": "Berechtigungen",
+      "settings": "Einstellungen",
+      "logs": "Protokolle"
+    },
+    "folder": {
+      "usermanagement": "Benutzerverwaltung",
+      "roles": "Rollen",
+      "permissions": "Berechtigungen",
+      "settings": "Einstellungen",
+      "logs": "Protokolle"
+    }
   }
 }
