feat: Implement Admin Layout and Navigation
- Added AdminLayout component for consistent admin page structure.
- Created AdminNavigation component for navigation within admin pages.
- Introduced Permissions component for managing user and role permissions.
- Updated routes to include admin paths and integrated new components.
- Refactored permissions and roles resources to use admin-specific endpoints.
- Updated localization files for new admin navigation labels.
- Removed temporary admin page and replaced with AdminDashboard.
- Enhanced PermissionsListPage to utilize the new Permissions component.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -16,9 +16,9 @@
       "logs": "Protokolle"
     },
     "folder": {
+      "events": "Kongresse",
       "usermanagement": "Benutzerverwaltung",
-      "roles": "Rollen",
-      "permissions": "Berechtigungen",
+      "accesscontrol": "Zugriffskontrolle",
       "settings": "Einstellungen",
       "logs": "Protokolle"
     }
